--- a/PSC Cost Control/App.config
+++ b/PSC Cost Control/App.config
@@ -1,15 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
-<connectionStrings>
-    <add name="PSC_COST2Entities" 
-		 connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\Khairy;initial catalog=PSC_COST2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
-        providerName="System.Data.EntityClient" />
-    <add name="PSC_Cost_Control.Properties.Settings.PSC_COST2ConnectionString"
-        connectionString="Data Source=.\Khairy;Initial Catalog=PSC_COST2;Integrated Security=True"
-        providerName="System.Data.SqlClient" />
-</connectionStrings></configuration>
+  <configSections></configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <connectionStrings>
+    <add name="PSC_Cost_Control.Properties.Settings.PSC_COST2ConnectionString" connectionString="Data Source=.\Khairy;Initial Catalog=PSC_COST2;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="PSC_COST2Entities" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=PSC_COST3;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PSC_COST3Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=PSC_COST3;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
