--- a/PSC Cost Control/PSC Cost Control.csproj
+++ b/PSC Cost Control/PSC Cost Control.csproj
@@ -33,6 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.8.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.8.1\lib\net45\Autofac.dll</HintPath>
+    </Reference>
+    <Reference Include="AutoMapper, Version=6.2.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.6.2.2\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="DevExpress.Data.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Images.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.PivotGrid.v18.2.Core, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
@@ -90,6 +96,7 @@
       <DependentUpon>Frm_Cost_Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Helper\Static.cs" />
+    <Compile Include="Mapping\AutoMapping.cs" />
     <Compile Include="Models\BOQs.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -151,6 +158,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\InMemoryRepositories\InMemoryRepo.cs" />
     <EmbeddedResource Include="Forms\Project Code\Frm_ProjectCode_Show.resx">
       <DependentUpon>Frm_ProjectCode_Show.cs</DependentUpon>
     </EmbeddedResource>
@@ -193,7 +201,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\SPs\" />
-    <Folder Include="Repositories\" />
     <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
