--- a/PSC Cost Control/packages.config
+++ b/PSC Cost Control/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.8.1" targetFramework="net452" />
+  <package id="AutoMapper" version="6.2.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="EntityFrameworkExtras.EF6" version="3.0.5" targetFramework="net452" />
 </packages>
