--- a/PSC Cost Control/PSC Cost Control.csproj
+++ b/PSC Cost Control/PSC Cost Control.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Helpers\Enums\TablesEnum.cs" />
+    <Compile Include="Repositories\PersistantReposotories\HireachyRepo.cs" />
     <Compile Include="Repositories\InMemoryRepositories\InMemoryHireachyRepo.cs" />
     <Compile Include="Repositories\PersistantReposotories\BaseRepo.cs" />
     <Compile Include="Repositories\PersistantReposotories\ProjectCodesRepositories\IProjectCodesRepo.cs" />
@@ -175,6 +176,7 @@
     <Compile Include="Repositories\PersistantReposotories\UnifiedCodesRepositories\UnifedCodeRepo.cs" />
     <Compile Include="Repositories\PersistantReposotories\UnifiedCodesRepositories\UnifiedCodeCategoriesRepo.cs" />
     <Compile Include="Services\DependencyApis\ExternalAPI%27s.cs" />
+    <Compile Include="Services\ProjectCodesServices\IProjectCodeService.cs" />
     <Compile Include="Services\ProjectCodesServices\ProjectCodeService.cs" />
     <EmbeddedResource Include="Forms\Project Code\Frm_Categories_ProjectCode.resx">
       <DependentUpon>Frm_Categories_ProjectCode.cs</DependentUpon>
@@ -219,9 +221,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repositories\PersistantReposotories\NewFolder1\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Models\Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
