--- a/PSC Cost Control/PSC Cost Control.csproj
+++ b/PSC Cost Control/PSC Cost Control.csproj
@@ -99,7 +99,7 @@
     <Compile Include="Frm_Cost_Main.Designer.cs">
       <DependentUpon>Frm_Cost_Main.cs</DependentUpon>
     </Compile>
-    <Compile Include="Helper\Interfaces\HasCode.cs" />
+    <Compile Include="Helper\Interfaces\IHireachy.cs" />
     <Compile Include="Helper\Static.cs" />
     <Compile Include="Helper\TreeListHandler\TreeListHandler.cs" />
     <Compile Include="Mapping\AutoMapping.cs" />
@@ -166,6 +166,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\PersistantReposotories\IAvailableId.cs" />
     <Compile Include="Repositories\Helpers\Enums\TablesEnum.cs" />
     <Compile Include="Repositories\PersistantReposotories\HireachyRepo.cs" />
     <Compile Include="Repositories\InMemoryRepositories\InMemoryHireachyRepo.cs" />
