--- a/PSC Cost Control/PSC Cost Control.csproj
+++ b/PSC Cost Control/PSC Cost Control.csproj
@@ -80,6 +80,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Trackers\PersistantCruds\IPersistent.cs" />
+    <Compile Include="Trackers\PersistantCruds\ProjectCodePersistent.cs" />
+    <Compile Include="Trackers\TrackingEntitiesFactory\Tracker.cs" />
     <Compile Include="Forms\Project Code\Frm_Categories_ProjectCode.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +101,7 @@
     <Compile Include="Frm_Cost_Main.Designer.cs">
       <DependentUpon>Frm_Cost_Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helper\Interfaces\IHasId.cs" />
     <Compile Include="Helper\Interfaces\IHireachy.cs" />
     <Compile Include="Helper\Static.cs" />
     <Compile Include="Helper\TreeListHandler\TreeListHandler.cs" />
