--- a/PSC Cost Control/PSC Cost Control.csproj
+++ b/PSC Cost Control/PSC Cost Control.csproj
@@ -98,6 +98,9 @@
     <Compile Include="Models\C_Cost_Direct_Project_Codes_Summerizng.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\C_Cost_Direct_Project_Codes_Summerizng1.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\C_Cost_Indirect_Project_Code_Summerizing.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
