Prepairing Sps with UDTs for Items Registeration

--- a/PSC Cost Control/PSC Cost Control.csproj
+++ b/PSC Cost Control/PSC Cost Control.csproj
@@ -132,9 +132,12 @@
     <Compile Include="Models\Projects.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\SPs\RegisterItemsToProjectCodeSP.cs" />
     <Compile Include="Models\sysdiagrams.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\UDTs\ItemPairCodeUDT.cs" />
+    <Compile Include="Models\UDTs\UpdateItemsCodeRegisteration.cs" />
     <Compile Include="Models\Units.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -189,7 +192,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Models\SPs\ProjectCodesInserion.cs" />
+    <Compile Include="Models\SPs\ProjectCodesInserionSP.cs" />
     <Compile Include="Models\SPs\UnifiedCodeInsertion.cs" />
     <Compile Include="Models\UDTs\ProjectCodeUdT.cs" />
     <Compile Include="Models\UDTs\UnifiedCodeUDT.cs" />
