--- a/PSC Cost Control/PSC Cost Control.csproj
+++ b/PSC Cost Control/PSC Cost Control.csproj
@@ -120,8 +120,10 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\DTO\DirectItemProjectCode.cs" />
+    <Compile Include="Models\DTO\DirectItemProjectCodeWithId.cs" />
     <Compile Include="Models\DTO\IItemPair.cs" />
     <Compile Include="Models\DTO\IItemPairWithId.cs" />
+    <Compile Include="Models\DTO\IndirectItemProjecCodeWithId.cs" />
     <Compile Include="Models\DTO\InDirectItemProjectCode.cs" />
     <Compile Include="Models\IndirectCostItems.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -130,6 +132,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ParialModels\C_Cost_Project_Codes.cs" />
+    <Compile Include="Models\ParialModels\C_Cost_Project_Codes_Items.cs" />
     <Compile Include="Models\ParialModels\C_Cost_Unified_Codes.cs" />
     <Compile Include="Models\Projects.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -152,13 +155,13 @@
     <Compile Include="Repositories\PersistantReposotories\UnifiedCodesRepositories\IUnifedCodeRepo.cs" />
     <Compile Include="Repositories\PersistantReposotories\UnifiedCodesRepositories\IUnifiedCodeCategoriesRepo.cs" />
     <Compile Include="Services\ProjectCodeItemRegisterationServices\IRegisterationService.cs" />
+    <Compile Include="Services\ProjectCodeItemRegisterationServices\ItemsRegisterationService.cs" />
     <Compile Include="Services\ProjectCodesServices\IProjectCodeCategoryService.cs" />
     <Compile Include="Services\ProjectCodesServices\ProjectCodeCategoryService.cs" />
     <Compile Include="Services\UnifiedCodesServices\IUnifiedCodeCategoryService.cs" />
     <Compile Include="Services\UnifiedCodesServices\UnifiedCodeCategoryService.cs" />
     <Compile Include="Services\UnifiedCodesServices\UnifiedCodeService.cs" />
     <Compile Include="Trackers\PersistantCruds\IPersistent.cs" />
-    <Compile Include="Trackers\PersistantCruds\ProjectCodePersistent.cs" />
     <Compile Include="Trackers\TrackingEntitiesFactory\Tracker.cs" />
     <Compile Include="Forms\Project Code\Frm_Categories_ProjectCode.cs">
       <SubType>Form</SubType>
