--- a/UnitTestProject1/packages.config
+++ b/UnitTestProject1/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.4.0" targetFramework="net452" />
+  <package id="Effort" version="2.2.13" targetFramework="net452" />
   <package id="Moq" version="4.16.1" targetFramework="net452" />
   <package id="MSTest.TestAdapter" version="2.1.1" targetFramework="net452" />
   <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net452" />
+  <package id="NMemory" version="3.1.2" targetFramework="net452" />
   <package id="NUnit" version="3.13.1" targetFramework="net452" />
   <package id="NUnit3TestAdapter" version="3.17.0" targetFramework="net452" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net452" />
