--- a/PSC Cost Control/PSC Cost Control.csproj
+++ b/PSC Cost Control/PSC Cost Control.csproj
@@ -80,6 +80,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\Items Registeration\Frm_ItemsRegisteration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Items Registeration\Frm_ItemsRegisteration.Designer.cs">
+      <DependentUpon>Frm_ItemsRegisteration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Unified Code\Frm_Categories_UnifiedCode.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -244,6 +250,9 @@
     <Compile Include="Services\DependencyApis\ExternalAPI%27s.cs" />
     <Compile Include="Services\ProjectCodesServices\IProjectCodeService.cs" />
     <Compile Include="Services\ProjectCodesServices\ProjectCodeService.cs" />
+    <EmbeddedResource Include="Forms\Items Registeration\Frm_ItemsRegisteration.resx">
+      <DependentUpon>Frm_ItemsRegisteration.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Unified Code\Frm_Categories_UnifiedCode.resx">
       <DependentUpon>Frm_Categories_UnifiedCode.cs</DependentUpon>
     </EmbeddedResource>
