--- a/UnitTestProject1/PSC Cost Control Unit Testings.csproj
+++ b/UnitTestProject1/PSC Cost Control Unit Testings.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HelpersUnitTestings\FakeIdsGeneratorUnitTestings.cs" />
     <Compile Include="HelpersUnitTestings\TreeListHandlerUnitTesting.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ServicesBuilder\ServiceBuilderUnitTestings.cs" />
@@ -91,7 +92,9 @@
       <Name>PSC Cost Control</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Services\ProjectCodeServices\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
